--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,3 +9,7 @@ layout: default
 </header>
 {{ content }}
 {%-include menu_item.html collection=site.data.menu.entries-%}
+
+<div style="text-align: center;">
+  <div class="text-tiny text-gray-600 dark:text-gray-400">Copyright © 2024 Not Today LLC. All Rights Reserved</div>
+</div>
