--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,5 +11,5 @@ layout: default
 {%-include menu_item.html collection=site.data.menu.entries-%}
 
 <div style="text-align: center;">
-  <div class="text-tiny text-gray-600 dark:text-gray-400">Copyright © 2024 Not Today LLC. All Rights Reserved</div>
+  <div class="text-tiny text-gray-600 dark:text-gray-400">Copyright © 2024 Not Today</div>
 </div>
