--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,7 +9,5 @@ layout: default
 </header>
 {{ content }}
 {%-include menu_item.html collection=site.data.menu.entries-%}
-
-<div style="text-align: center;">
-  <div class="text-tiny text-gray-600 dark:text-gray-400">Copyright © 2024 Not Today</div>
-</div>
+<script data-goatcounter="https://thekingofcool.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
