change website title

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,5 +12,5 @@ layout: default
 <script data-goatcounter="https://thekingofcool.goatcounter.com/count"
         async src="//gc.zgo.at/count.js"></script>
 <div style="text-align: center;">
-  <div class="text-tiny text-gray-600 dark:text-gray-400">Copyright © 2024 Not Today<a href="https://thekingofcool.goatcounter.com/">.</a></div>
+  <div class="text-tiny text-gray-600 dark:text-gray-400">Copyright © 2024 Not Today<a href="https://thekingofcool.goatcounter.com/" target="_blank">.</a></div>
 </div>
